--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
 
+    <meta name="description" content="Invoice App" />
+    <meta name="title" property="og:title" content="Invoice App" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51192762217_aab789db2b_c.jpg" />
+    <meta name="description" property="og:description" content="Invoice App" />
+    <meta name="author" content="Jesse Ronda" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
